# shuffle-coding

./: Cargo.toml  LICENCE  README.md
src/: ans.rs  benchmark.rs  codec.rs  datasets.rs  graph.rs  graph_ans.rs  graph_codec.rs  labelled_graph.rs  main.rs  multiset.rs  param_ans.rs  param_codec.rs  permutable.rs
src/plain/: coset_recursive.rs  labelled_graph.rs  mod.rs
src/recursive/: complete.rs  joint.rs  mod.rs  multiset.rs  plain_orbit.rs  prefix_orbit.rs  product.rs
src/recursive/graph/: incomplete.rs  mod.rs  prefix.rs  slice.rs  slice_ans.rs
src/shuffle_ans/: coset_interleaved.rs  interleaved.rs  mod.rs
szip-graphs/: datasets.md
