[package]
name = "shuffle-coding"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/juliuskunze/shuffle-coding"
exclude = ["data/*", ".idea/*", ".DS_Store"]

[dependencies]
nauty-Traces-sys = "0.7.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
itertools = "0.12.0"
float_extras = "0.1.6"
timeit = "0.1.2"
downloader = "0.2.7"
zip-extract = "0.1.2"
lazy_static = "1.4.0"
clap = { version = "4.4.13", features = ["derive"] }
